Fix problem with footer overlapping on small screens

--- a/tsos.css
+++ b/tsos.css
@@ -74,10 +74,10 @@ h3 {
   color: black;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 8pt;
-  position: fixed;
+  /* position: fixed;
   bottom: 0;
   left: 0;
   width: 100%;
-  margin-bottom: 10px;
+  margin-bottom: 10px; */
   text-align: center;
 }
